--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "lint": "yarn lint:js"
   },
   "dependencies": {
+    "@mdi/font": "^5.8.55",
     "@nuxtjs/axios": "^5.12.2",
     "core-js": "^3.6.5",
-    "nuxt": "^2.14.6"
+    "nuxt": "^2.14.6",
+    "nuxtjs-mdi-font": "^1.0.2"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^3.1.0",
