--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@nuxtjs/axios": "^5.12.2",
     "core-js": "^3.6.5",
     "nuxt": "^2.14.6",
-    "nuxtjs-mdi-font": "^1.0.2"
+    "nuxtjs-mdi-font": "^1.0.2",
+    "v-click-outside": "^3.1.2"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^3.1.0",
